2022-07-29  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): rewrite code
        for numeric neighbourhood functions

2021-09-01  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (ans): add type "permute"

2020-06-05  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (compare_vectors): simplify
        computation
        (neighbourfun): fix case of numeric neighbourhood
        with updating and 'active' vector

2020-05-12  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (compare_vectors): new
        argument 'diff.char'

2020-03-28  Enrico Schumann  <es@enricoschumann.net>

        * vignettes/neighbours.Rnw: add vignette

2019-12-12  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun,random_vector):
        rename argument 'n' => 'length'
        (random_vector): argument 'n' now stands for the
        number of random vectors to draw; the vectors will
        be the columns of a matrix of dimension 'length'
        times 'n'

2019-11-14  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): add new
        type "5/10/40"

2019-09-20  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): support
        neighbourhoods without sum constraint

2019-09-12  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): support
        updating
        (neighbourfun): refactor; use 'substitute'

2019-07-24  Enrico Schumann  <es@enricoschumann.net>

        * NAMESPACE: export 'random_vector' and
        'compare_vectors'

        * R/neighbourfun.R (random_vector): add function
        (compare_vectors): add function

2019-05-29  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): simplify
        treatment of arguments

2019-05-28  Enrico Schumann  <es@enricoschumann.net>
