@@ -1,3 +1,8 @@
+2022-08-10  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/neighbourfun.R (neighbourfun): fix "permute"
+        neighbourhoods with stepsize > 2
+
 2022-07-29  Enrico Schumann  <es@enricoschumann.net>
 
         * R/neighbourfun.R (neighbourfun): rewrite code
